feat: localize and optimize auth screens UI
- Add Croatian/English localizations for all auth strings
- Reduce border radius (24px → 16px) for consistency with app design
- Compact spacing on mobile (smaller padding, font sizes)
- Smaller button height (56px → 48px)
- Smaller logo and avatar sizes on mobile
- Use l10n for all text strings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,8 +48,45 @@
   "dontHaveAccount": "Don't have an account?",
   "signInWithGoogle": "Sign in with Google",
   "continueWithGoogle": "Continue with Google",
+  "continueWithApple": "Continue with Apple",
   "welcomeBack": "Welcome Back",
   "loginToYourAccount": "Sign in to your account",
+  
+  "authOwnerLogin": "Owner Login",
+  "authManageProperties": "Manage your properties and bookings",
+  "authRememberMe": "Remember me",
+  "authForgotPassword": "Forgot password?",
+  "authOrContinueWith": "or continue with",
+  "authPreviewDemo": "Preview Demo (Anonymous)",
+  "authCreateAccount": "Create Account",
+  "authNoAccount": "Don't have an account?",
+  "authHaveAccount": "Already have an account?",
+  "authResetPassword": "Reset Your Password",
+  "authResetPasswordDesc": "Enter your email address and we'll send you instructions to reset your password.",
+  "authSendResetLink": "Send Reset Link",
+  "authBackToLogin": "Back to Login",
+  "authEmailSent": "Email Sent!",
+  "authResetEmailSentTo": "We've sent password reset instructions to:",
+  "authReturnToLogin": "Return to Login",
+  "authResendEmail": "Didn't receive the email? Resend",
+  "authStartManaging": "Start managing your properties today",
+  "authFullName": "Full Name",
+  "authPhone": "Phone (optional)",
+  "authConfirmPassword": "Confirm Password",
+  "authAcceptTerms": "I accept the ",
+  "authTermsConditions": "Terms & Conditions",
+  "authPrivacyPolicy": "Privacy Policy",
+  "authNewsletterOptIn": "Send me updates and promotional offers",
+  "authMustAcceptTerms": "You must accept the Terms & Conditions and Privacy Policy",
+  "authEnterFullName": "Please enter your full name",
+  "authEnterFirstLastName": "Please enter both first and last name",
+  "authIncorrectPassword": "Incorrect password. Try again or reset your password.",
+  "authWelcomeUser": "Welcome back, {name}!",
+  "@authWelcomeUser": {
+    "placeholders": {
+      "name": {"type": "String"}
+    }
+  },
   "loginSuccessful": "Successfully logged in!",
   "loginFailed": "Login failed",
   "googleLoginFailed": "Google sign-in failed",
