--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -48,8 +48,45 @@
   "dontHaveAccount": "Nemate nalog?",
   "signInWithGoogle": "Prijavite se sa Google",
   "continueWithGoogle": "Nastavite s Google",
+  "continueWithApple": "Nastavite s Apple",
   "welcomeBack": "Dobrodošli nazad",
   "loginToYourAccount": "Prijavite se na svoj račun",
+  
+  "authOwnerLogin": "Prijava vlasnika",
+  "authManageProperties": "Upravljajte nekretninama i rezervacijama",
+  "authRememberMe": "Zapamti me",
+  "authForgotPassword": "Zaboravili lozinku?",
+  "authOrContinueWith": "ili nastavite s",
+  "authPreviewDemo": "Pregled demo (Anonimno)",
+  "authCreateAccount": "Kreiraj račun",
+  "authNoAccount": "Nemate račun?",
+  "authHaveAccount": "Već imate račun?",
+  "authResetPassword": "Resetiraj lozinku",
+  "authResetPasswordDesc": "Unesite email adresu i poslat ćemo vam upute za resetiranje lozinke.",
+  "authSendResetLink": "Pošalji link za reset",
+  "authBackToLogin": "Natrag na prijavu",
+  "authEmailSent": "Email poslan!",
+  "authResetEmailSentTo": "Poslali smo upute za resetiranje lozinke na:",
+  "authReturnToLogin": "Vrati se na prijavu",
+  "authResendEmail": "Niste primili email? Pošalji ponovo",
+  "authStartManaging": "Počnite upravljati nekretninama danas",
+  "authFullName": "Puno ime",
+  "authPhone": "Telefon (opcionalno)",
+  "authConfirmPassword": "Potvrdi lozinku",
+  "authAcceptTerms": "Prihvaćam ",
+  "authTermsConditions": "Uvjete korištenja",
+  "authPrivacyPolicy": "Politiku privatnosti",
+  "authNewsletterOptIn": "Šaljite mi novosti i promotivne ponude",
+  "authMustAcceptTerms": "Morate prihvatiti Uvjete korištenja i Politiku privatnosti",
+  "authEnterFullName": "Molimo unesite puno ime",
+  "authEnterFirstLastName": "Molimo unesite ime i prezime",
+  "authIncorrectPassword": "Pogrešna lozinka. Pokušajte ponovo ili resetirajte lozinku.",
+  "authWelcomeUser": "Dobrodošli, {name}!",
+  "@authWelcomeUser": {
+    "placeholders": {
+      "name": {"type": "String"}
+    }
+  },
   "loginSuccessful": "Uspješno ste se prijavili!",
   "loginFailed": "Prijava neuspješna",
   "googleLoginFailed": "Google prijava neuspješna",
