feat: add welcome screen for new users without properties
- Show welcome screen with CTA to add first property when user has no properties
- Add localization strings for welcome screen (HR/EN)
- Fix route to use OwnerRoutes.propertyNew instead of propertyAdd
- Skip onboarding wizard for new users (go directly to dashboard)

--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -490,6 +490,10 @@
   "ownerActiveProperties": "Aktivne nekretnine",
   "ownerOccupancyRate": "Popunjenost",
 
+  "ownerWelcomeTitle": "Dobrodošli u RAB Booking!",
+  "ownerWelcomeSubtitle": "Započnite dodavanjem vaše prve nekretnine kako biste mogli primati rezervacije.",
+  "ownerAddFirstProperty": "Dodaj nekretninu",
+
   "ownerNewBookingReceived": "Nova rezervacija primljena",
   "ownerBookingConfirmedActivity": "Rezervacija potvrđena",
   "ownerBookingCancelledActivity": "Rezervacija otkazana",
