--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -490,6 +490,10 @@
   "ownerActiveProperties": "Active properties",
   "ownerOccupancyRate": "Occupancy rate",
 
+  "ownerWelcomeTitle": "Welcome to RAB Booking!",
+  "ownerWelcomeSubtitle": "Get started by adding your first property to start receiving bookings.",
+  "ownerAddFirstProperty": "Add Property",
+
   "ownerNewBookingReceived": "New booking received",
   "ownerBookingConfirmedActivity": "Booking confirmed",
   "ownerBookingCancelledActivity": "Booking cancelled",
