refactor(profile): improve profile screen with shared components and fixes
- Add localized language name strings (ownerProfileLanguageEnglish/Croatian)
- Fix potential crash when displayName is empty (added safety check)
- Extract PremiumListTile and LogoutTile to shared widgets (removed 140+ lines of duplicated code)
- Add loading indicator for network avatar images
- Fix iCal dialog background to match app theme

Changes:
- lib/l10n/app_en.arb: Added language name strings
- lib/l10n/app_hr.arb: Added language name strings
- lib/shared/widgets/premium_list_tile.dart: New reusable component
- lib/shared/widgets/logout_tile.dart: New reusable component
- lib/features/owner_dashboard/presentation/screens/profile_screen.dart: Refactored to use shared widgets
- lib/features/owner_dashboard/presentation/screens/ical/ical_sync_settings_screen.dart: Fixed dialog theme

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -930,6 +930,8 @@
   "ownerProfileTitle": "Profile",
   "ownerProfileThemeLight": "Light",
   "ownerProfileThemeDark": "Dark",
+  "ownerProfileLanguageEnglish": "English",
+  "ownerProfileLanguageCroatian": "Croatian",
   "ownerProfileThemeSystem": "System default",
   "ownerProfileNotAuthenticated": "Not authenticated",
   "ownerProfileGuestUser": "Guest User",
