fix(l10n): Replace Ekavian (Serbian) words with Ijekavian (Croatian)
Replace all Ekavian dialect words with proper Croatian Ijekavian equivalents:
- cena/cene/cenu → cijena/cijene/cijenu
- Cena → Cijena
- objekat → objekt
- primenjiv/primenjivo → primjenjiv/primjenjivo

Affected strings:
- Unit Wizard pricing section titles and helpers
- FAQ answers (payment, cancellation, property details)
- Terms and conditions (cancellation, reviews)
- Onboarding messages

This ensures all Croatian text uses standard Croatian language (ijekavica)
instead of Serbian variant (ekavica).

--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -286,13 +286,13 @@
   "termsBookingsPaymentsTitle": "4. Rezervacije i Plaćanja",
   "termsBookingsPaymentsBody": "Sve rezervacije podliježu dostupnosti i potvrdi. Plaćanje mora biti izvršeno u cijelosti u vrijeme rezervacije osim ako nije drugačije navedeno. Cijene podliježu promjenama bez najave, ali potvrđene rezervacije će poštovati originalno navedenu cijenu.",
   "termsCancellationTitle": "5. Politika Otkazivanja",
-  "termsCancellationBody": "Politike otkazivanja variraju po objektu. Molimo vas da pregledate specifičnu politiku otkazivanja za svaki objekat prije rezervacije. Povrati novca, ako su primjenjivi, bit će obrađeni u skladu sa politikom otkazivanja objekta i mogu trajati 5-10 radnih dana.",
+  "termsCancellationBody": "Politike otkazivanja variraju po objektu. Molimo vas da pregledate specifičnu politiku otkazivanja za svaki objekt prije rezervacije. Povrati novca, ako su primjenjivi, bit će obrađeni u skladu sa politikom otkazivanja objekta i mogu trajati 5-10 radnih dana.",
   "termsPropertyOwnersTitle": "6. Odgovornosti Vlasnika Nekretnina",
   "termsPropertyOwnersBody": "Vlasnici nekretnina moraju pružiti tačne opise i fotografije svojih objekata. Moraju održavati svoje objekte u dobrom stanju i osigurati dostupnost kako je navedeno. Vlasnici su odgovorni za poštovanje svih lokalnih zakona i propisa.",
   "termsGuestResponsibilitiesTitle": "7. Odgovornosti Gostiju",
   "termsGuestResponsibilitiesBody": "Gosti moraju tretirati objekte sa poštovanjem i pažnjom. Bilo kakva šteta izvan normalnog habanja bit će naplaćena gostu. Gosti moraju poštovati pravila objekta, lokalne zakone i susjedske odredbe.",
   "termsReviewsRatingsTitle": "8. Recenzije i Ocene",
-  "termsReviewsRatingsBody": "Korisnici mogu ostavljati recenzije i ocjene za objekte koje su rezervirali. Recenzije moraju biti iskrene, točne i relevantne za objekat. Zadržavamo pravo da uklonimo recenzije koje krše naše smjernice.",
+  "termsReviewsRatingsBody": "Korisnici mogu ostavljati recenzije i ocjene za objekte koje su rezervirali. Recenzije moraju biti iskrene, točne i relevantne za objekt. Zadržavamo pravo da uklonimo recenzije koje krše naše smjernice.",
   "termsLimitationLiabilityTitle": "9. Ograničenje Odgovornosti",
   "termsLimitationLiabilityBody": "Nismo odgovorni za točnost oglasa nekretnina ili ponašanje vlasnika ili gostiju. Ne garantiramo kvalitetu, sigurnost ili zakonitost navedenih objekata. Korištenje ove usluge je na vaš vlastiti rizik.",
   "termsDisputesTitle": "10. Sporovi",
@@ -348,19 +348,19 @@
   "faqPaymentMethods": "Koje metode plaćanja su prihvaćene?",
   "faqPaymentMethodsAnswer": "Prihvaćamo sljedeće metode plaćanja:\n\n• Kreditne kartice (Visa, MasterCard, American Express)\n• Debitne kartice\n• PayPal\n• Apple Pay\n• Google Pay\n\nSva plaćanja se obrađuju sigurno kroz našeg pružatelja plaćanja. Ne čuvamo detalje vaše platne kartice na našim serverima.",
   "faqWhenCharged": "Kada će mi biti naplaćeno?",
-  "faqWhenChargedAnswer": "Plaćanje se obrađuje odmah kada potvrdite rezervaciju. Puni iznos, uključujući cenu objekta, servisne naknade i sve primenjive poreze, biće naplaćen na vašu metodu plaćanja.\n\nZa određene objekte ili dugoročne rezervacije, opcije plaćanja na rate mogu biti dostupne.",
+  "faqWhenChargedAnswer": "Plaćanje se obrađuje odmah kada potvrdite rezervaciju. Puni iznos, uključujući cijenu objekta, servisne naknade i sve primjenjive poreze, biće naplaćen na vašu metodu plaćanja.\n\nZa određene objekte ili dugoročne rezervacije, opcije plaćanja na rate mogu biti dostupne.",
   "faqAdditionalFees": "Postoje li dodatne naknade?",
-  "faqAdditionalFeesAnswer": "Pored cene objekta, možete biti naplaćeni:\n\n• Servisna naknada (obično 10-15% od subtotala rezervacije)\n• Naknada za čišćenje (ako je primenjivo, postavlja vlasnik objekta)\n• Lokalni porezi (varira po lokaciji)\n\nSve naknade su jasno prikazane pre nego što potvrdite rezervaciju. Nema skrivenih troškova.",
+  "faqAdditionalFeesAnswer": "Pored cijene objekta, možete biti naplaćeni:\n\n• Servisna naknada (obično 10-15% od subtotala rezervacije)\n• Naknada za čišćenje (ako je primjenjivo, postavlja vlasnik objekta)\n• Lokalni porezi (varira po lokaciji)\n\nSve naknade su jasno prikazane pre nego što potvrdite rezervaciju. Nema skrivenih troškova.",
   "faqCancellationPolicy": "Šta je politika otkazivanja?",
-  "faqCancellationPolicyAnswer": "Politike otkazivanja variraju po objektu. Uobičajene politike uključuju:\n\n• Fleksibilna: Pun povraćaj ako se otkaže 24-48 sati pre prijave\n• Umerena: 50% povraćaj ako se otkaže 5-7 dana pre prijave\n• Stroga: Bez povraćaja ako se otkaže u roku od 14 dana pre prijave\n\nUvek proverite specifičnu politiku otkazivanja za svaki objekat pre rezervacije. Politika je prikazana na stranici sa detaljima objekta i u vašoj potvrdi rezervacije.",
+  "faqCancellationPolicyAnswer": "Politike otkazivanja variraju po objektu. Uobičajene politike uključuju:\n\n• Fleksibilna: Pun povraćaj ako se otkaže 24-48 sati pre prijave\n• Umerena: 50% povraćaj ako se otkaže 5-7 dana pre prijave\n• Stroga: Bez povraćaja ako se otkaže u roku od 14 dana pre prijave\n\nUvek proverite specifičnu politiku otkazivanja za svaki objekt pre rezervacije. Politika je prikazana na stranici sa detaljima objekta i u vašoj potvrdi rezervacije.",
   "faqHowToCancel": "Kako da otkažem rezervaciju?",
   "faqHowToCancelAnswer": "Da biste otkazali rezervaciju:\n\n1. Idite na \"Moje Rezervacije\" u vašem nalogu\n2. Izaberite rezervaciju koju želite da otkažete\n3. Kliknite \"Otkaži Rezervaciju\"\n4. Pregledajte politiku otkazivanja i iznos povraćaja\n5. Potvrdite otkazivanje\n\nVaš povraćaj (ako je primenjiv) biće obrađen u roku od 5-10 radnih dana na vašu originalnu metodu plaćanja.",
   "faqFullRefund": "Da li ću dobiti pun povraćaj ako otkažem?",
   "faqFullRefundAnswer": "Iznos povraćaja zavisi od:\n\n• Politike otkazivanja objekta\n• Koliko unapred otkažete\n• Da li ste kupili putno osiguranje\n\nTačan iznos povraćaja se izračunava i prikazuje pre nego što potvrdite otkazivanje. Servisne naknade mogu biti nepovratne u zavisnosti od vremena vašeg otkazivanja.",
   "faqContactOwner": "Kako da kontaktiram vlasnika objekta?",
   "faqContactOwnerAnswer": "Nakon što je vaša rezervacija potvrđena, možete kontaktirati vlasnika objekta kroz:\n\n1. Sistem za poruke u detaljima vaše rezervacije\n2. Kontakt informacije u vašem email-u sa potvrdom\n3. Dugme \"Kontaktiraj Domaćina\" na stranici objekta\n\nSve poruke se prate radi bezbednosti i osiguranja kvaliteta.",
-  "faqPropertyMismatch": "Šta ako objekat ne odgovara opisu?",
-  "faqPropertyMismatchAnswer": "Ako objekat ne odgovara opisu ili fotografijama:\n\n1. Dokumentujte probleme sa fotografijama\n2. Odmah kontaktirajte vlasnika objekta\n3. Ako nije rešeno, kontaktirajte našu korisničku podršku u roku od 24 sata od prijave\n\nMožemo ponuditi delimični povraćaj, pomoći vam da pronađete alternativni smeštaj ili pružiti druga rešenja u zavisnosti od situacije.",
+  "faqPropertyMismatch": "Šta ako objekt ne odgovara opisu?",
+  "faqPropertyMismatchAnswer": "Ako objekt ne odgovara opisu ili fotografijama:\n\n1. Dokumentujte probleme sa fotografijama\n2. Odmah kontaktirajte vlasnika objekta\n3. Ako nije rešeno, kontaktirajte našu korisničku podršku u roku od 24 sata od prijave\n\nMožemo ponuditi delimični povraćaj, pomoći vam da pronađete alternativni smeštaj ili pružiti druga rešenja u zavisnosti od situacije.",
   "faqLeaveReview": "Kako da ostavim recenziju?",
   "faqLeaveReviewAnswer": "Nakon vašeg boravka, možete ostaviti recenziju:\n\n1. Idite na \"Moje Rezervacije\"\n2. Pronađite vašu završenu rezervaciju\n3. Kliknite \"Napiši Recenziju\"\n4. Ocenite svoje iskustvo i napišite povratne informacije\n5. Pošaljite recenziju\n\nRecenzije pomažu drugim gostima da donesu informisane odluke i pomažu vlasnicima objekata da poboljšaju svoju uslugu.",
   "faqCreateAccount": "Kako da kreiram nalog?",
@@ -1348,12 +1348,12 @@
   "onboardingAlreadyHaveAccount": "Već imate nalog?",
   "onboardingSignIn": "Prijavite se",
   "onboardingSkipTitle": "Preskoči vodič?",
-  "onboardingSkipDesc": "Ako preskočite vodič, nećete naučiti osnove podešavanja sistema. Uvijek možete dodati objekat i jedinice kasnije kroz postavke.\n\nŽelite li nastaviti?",
+  "onboardingSkipDesc": "Ako preskočite vodič, nećete naučiti osnove podešavanja sistema. Uvijek možete dodati objekt i jedinice kasnije kroz postavke.\n\nŽelite li nastaviti?",
   "onboardingSkip": "Preskoči",
 
   "onboardingSuccessCongrats": "Čestitamo!",
   "onboardingSuccessSubtitle": "Uspješno ste završili početno podešavanje",
-  "onboardingSuccessDesc": "Vaš objekat je kreiran i spreman za korištenje.",
+  "onboardingSuccessDesc": "Vaš objekt je kreiran i spreman za korištenje.",
   "onboardingSuccessNextSteps": "Sljedeći koraci:",
   "onboardingSuccessAddUnits": "Dodajte jedinice",
   "onboardingSuccessAddUnitsDesc": "Kreirajte sobe ili apartmane",
@@ -2035,18 +2035,18 @@
   "unitWizardStep2MinGuest": "Minimalno 1 gost",
   "unitWizardStep2InfoTip": "Ove informacije pomažu gostima da odaberu odgovarajući smještaj",
 
-  "unitWizardStep3Title": "Cena i Dostupnost",
-  "unitWizardStep3Subtitle": "Postavite cenu, minimalan boravak i dostupnost",
+  "unitWizardStep3Title": "Cijena i Dostupnost",
+  "unitWizardStep3Subtitle": "Postavite cijenu, minimalan boravak i dostupnost",
   "unitWizardStep3PriceInfo": "Informacije o Cijeni",
   "unitWizardStep3PriceInfoDesc": "Osnovna cijena i pravila rezervacije",
   "unitWizardStep3PricePerNight": "Cijena po Noći (€) *",
   "unitWizardStep3PricePerNightHint": "50",
-  "unitWizardStep3PricePerNightHelper": "Osnovna cena za jednu noć",
+  "unitWizardStep3PricePerNightHelper": "Osnovna cijena za jednu noć",
   "unitWizardStep3PriceRequired": "Cijena je obavezna",
   "unitWizardStep3PriceInvalid": "Unesite ispravnu cijenu",
-  "unitWizardStep3WeekendPrice": "Vikend Cena (€)",
+  "unitWizardStep3WeekendPrice": "Vikend Cijena (€)",
   "unitWizardStep3WeekendPriceHint": "70",
-  "unitWizardStep3WeekendPriceHelper": "Cena za Sub-Ned (opcionalno)",
+  "unitWizardStep3WeekendPriceHelper": "Cijena za Sub-Ned (opcionalno)",
   "unitWizardStep3MinStay": "Minimalan Boravak (noći) *",
   "unitWizardStep3MinStayHint": "1",
   "unitWizardStep3MinStayHelper": "Najmanje noći za rezervaciju",
@@ -2136,7 +2136,7 @@
   },
   "unitWizardProgressInfo": "Info",
   "unitWizardProgressCapacity": "Kapacitet",
-  "unitWizardProgressPrice": "Cena",
+  "unitWizardProgressPrice": "Cijena",
   "unitWizardProgressPhotos": "Fotografije",
   "unitWizardProgressReview": "Pregled",
   "unitWizardProgressOptional": "(opcionalno)",
