--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -62,6 +62,14 @@
   "authErrorInvalidEmail": "Invalid email address.",
   "authErrorUserDisabled": "This account has been disabled.",
   "authErrorTooManyRequests": "Too many failed attempts. Please try again later.",
+  "authErrorRateLimitWait": "{seconds, plural, =1{Too many failed attempts. Try again in 1 second.} other{Too many failed attempts. Try again in {seconds} seconds.}}",
+  "@authErrorRateLimitWait": {
+    "placeholders": {
+      "seconds": {
+        "type": "int"
+      }
+    }
+  },
   "authErrorGeneric": "Login failed. Please check your credentials and try again.",
   "authForgotPassword": "Forgot password?",
   "authOrContinueWith": "or continue with",
@@ -3254,5 +3262,19 @@
   "subscriptionFaqDataSafeAnswer": "Absolutely. Your data is stored securely and will never be deleted, even if your trial expires or you cancel your subscription.",
   "subscriptionComingSoon": "Coming Soon",
   "subscriptionComingSoonMessage": "Payment integration is coming soon! For now, please contact us to upgrade your account.",
-  "profileSubscriptionSubtitle": "Manage your plan"
+  "profileSubscriptionSubtitle": "Manage your plan",
+  "subscriptionDaysLeft": "{count, plural, =0{Today} =1{1 day left} other{{count} days left}}",
+  "@subscriptionDaysLeft": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "subscriptionStatusTrial": "Trial Period",
+  "subscriptionStatusActive": "Active Subscription",
+  "subscriptionStatusExpired": "Trial Expired",
+  "subscriptionStatusSuspended": "Account Suspended",
+  "calendarTutorialScrollHint": "Swipe horizontally to view more dates",
+  "calendarTutorialLongPressHint": "Long press on the grid to add a booking",
+  "calendarTutorialGotIt": "Got it!",
+  "calendarTutorialExampleBooking": "Example Booking"
 }
