--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -62,6 +62,14 @@
   "authErrorInvalidEmail": "Nevažeća email adresa.",
   "authErrorUserDisabled": "Ovaj račun je onemogućen.",
   "authErrorTooManyRequests": "Previše neuspješnih pokušaja. Pokušajte kasnije.",
+  "authErrorRateLimitWait": "{seconds, plural, one{Previše neuspješnih pokušaja. Pokušajte ponovo za {seconds} sekundu.} few{Previše neuspješnih pokušaja. Pokušajte ponovo za {seconds} sekunde.} other{Previše neuspješnih pokušaja. Pokušajte ponovo za {seconds} sekundi.}}",
+  "@authErrorRateLimitWait": {
+    "placeholders": {
+      "seconds": {
+        "type": "int"
+      }
+    }
+  },
   "authErrorGeneric": "Prijava nije uspjela. Provjerite podatke i pokušajte ponovo.",
   "authForgotPassword": "Zaboravili lozinku?",
   "authOrContinueWith": "ili nastavite s",
@@ -3261,5 +3269,19 @@
   "subscriptionFaqDataSafeAnswer": "Apsolutno. Vaši podaci su sigurno pohranjeni i nikada neće biti obrisani, čak i ako vaš probni period istekne ili otkažete pretplatu.",
   "subscriptionComingSoon": "Uskoro",
   "subscriptionComingSoonMessage": "Integracija plaćanja uskoro stiže! Za sada, molimo kontaktirajte nas za nadogradnju računa.",
-  "profileSubscriptionSubtitle": "Upravljajte svojim planom"
+  "profileSubscriptionSubtitle": "Upravljajte svojim planom",
+  "subscriptionDaysLeft": "{count, plural, =0{Danas} =1{Još {count} dan} few{Još {count} dana} other{Još {count} dana}}",
+  "@subscriptionDaysLeft": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "subscriptionStatusTrial": "Probni period",
+  "subscriptionStatusActive": "Aktivna pretplata",
+  "subscriptionStatusExpired": "Istekao probni period",
+  "subscriptionStatusSuspended": "Račun suspendiran",
+  "calendarTutorialScrollHint": "Povucite horizontalno za pregled datuma",
+  "calendarTutorialLongPressHint": "Dugi pritisak na mrežu za dodavanje rezervacije",
+  "calendarTutorialGotIt": "Razumijem!",
+  "calendarTutorialExampleBooking": "Primjer rezervacije"
 }
